Nutritional icon mobile centered + h2 fix

--- a/src/scss/components/RecipeDietaryAttributes/_recipe-dietary-attributes.scss
+++ b/src/scss/components/RecipeDietaryAttributes/_recipe-dietary-attributes.scss
@@ -3,11 +3,7 @@
   padding: 30px 0 36px;
   border-radius: 20px;
   h2{
-    font-size: 2.1rem;
     margin-bottom: 35px;
-    @include respondTo(medium){
-      font-size: 2.5rem;
-    }
   }
   .container-fluid{
     @extend .container;
@@ -21,11 +17,8 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
-    @include respondTo(medium){
-      justify-content: center;
-    }
   }
 
   &__item{
